<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#08AD7F"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/naotenhoconta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintVertical_chainStyle="spread"
        android:text="@string/naoconta"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintCircle="@id/naotenhoconta"
        android:paddingEnd="120dp"
        android:paddingStart="120dp"
        app:layout_constraintCircleRadius="64dp"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#DADADA"
        android:textColorHint="#08AD7F"
        android:hint="@string/login"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintCircle="@id/naotenhoconta"
        android:paddingEnd="315dp"
        android:padding="2dp"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintCircleRadius="110dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#fff"
        android:hint="@string/senha"
        />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintCircle="@id/naotenhoconta"
        android:paddingEnd="320dp"
        android:padding="2dp"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintCircleRadius="145dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#fff"
        android:hint="@string/email"/>

</androidx.constraintlayout.widget.ConstraintLayout>